# hdf5-java-bindings

./: .gitignore  .project  README.md  build.properties  pom.xml
src/main/java/ncsa/hdf/hdf5lib/: CMakeLists.txt  H5.java
src/main/java/ncsa/hdf/hdf5lib/exceptions/: HDF5AtomException.java  HDF5AttributeException.java  HDF5BtreeException.java  HDF5DataFiltersException.java  HDF5DataStorageException.java  HDF5DatasetInterfaceException.java  HDF5DataspaceInterfaceException.java  HDF5Exception.java  (+16 more)
src/main/java/ncsa/hdf/hdflib/: CMakeLists.txt  HDFArray.java  HDFChunkInfo.java  HDFCompInfo.java  HDFConstants.java  HDFDeflateCompInfo.java  HDFDeprecated.java  HDFException.java  HDFIMCOMPCompInfo.java  HDFJPEGCompInfo.java  HDFJavaException.java  HDFLibrary.java  HDFLibraryException.java  HDFNBITChunkInfo.java  HDFNBITCompInfo.java  HDFNativeData.java  HDFNewCompInfo.java  HDFNotImplementedException.java  HDFOldCompInfo.java  HDFOldRLECompInfo.java  HDFRLECompInfo.java  HDFSKPHUFFCompInfo.java  HDFSZIPCompInfo.java  HDFTable.java
src/main/java/ncsa/hdf/object/: Attribute.java  CMakeLists.txt  CompoundDS.java  DataFormat.java  Dataset.java  Datatype.java  FileFormat.java  Group.java  HObject.java  Metadata.java  ScalarDS.java
src/main/java/ncsa/hdf/object/h5/: CMakeLists.txt  H5CompoundDS.java  H5Datatype.java  H5File.java  H5Group.java  H5ScalarDS.java
src/main/java/ncsa/hdf/object/nc2/: CMakeLists.txt  Makefile.in  NC2Dataset.java  NC2Datatype.java  NC2File.java  NC2Group.java
src/main/java/ncsa/hdf/utils/: SetNatives.java
src/main/resources/natives/linux-x86/: libhdf4.settings  libhdf5.settings
src/main/resources/natives/mac-x86/: libhdf4.settings  libhdf5.settings
src/main/resources/natives/mac-x86_64/: libhdf4.settings  libhdf5.settings
src/test/java/: CreateFile.java  CreateFileJunit.java  TestCreateFile.java
src/test/java/ncsa/hdf/tests/: CreateFileJunit.java
